# starburst-data-products-client

./: .gitignore  AUTHENTICATION.md  pyproject.toml  starburst_api_docs.md  test-sep-dp.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  gh-pages.yml  publish.yml
docs/: conf.py  index.rst  modules.rst  starburst_data_products_client.galaxy.api.rst  starburst_data_products_client.galaxy.models.rst  starburst_data_products_client.galaxy.rst  starburst_data_products_client.rst  starburst_data_products_client.sep.api.rst  starburst_data_products_client.sep.data.rst  starburst_data_products_client.sep.rst  starburst_data_products_client.shared.api.rst  starburst_data_products_client.shared.models.rst  starburst_data_products_client.shared.rst  usage.rst
docs/_static/: starburst.css
docs/_templates/: footer.html  header.html  layout.html
examples/: .env.example  0_create_domain.py  1_basic_operations_dry_run.py  2_create_data_product.py  3_update_data_product.py  4_apply_pii_tags.py  5_publish_workflow.py  6_cleanup_unused_tags.py  7_data_product_usage_statistics.py  8_direct_curl_statistics.py  README.md  curl_statistics.sh  oauth_authentication_example.py  oauth_troubleshooting.py
examples/.claude/: settings.local.json
starburst_data_products_client/sep/api/: Api.py  __init__.py
starburst_data_products_client/sep/data/: DataProduct.py  MaterializedView.py  (+5 more)
starburst_data_products_client/shared/: auth_config.py
tests/: conftest.py  test_sep_data_products.py  test_sep_domains.py
tests/docker/: config.properties  docker-compose.yml  log.properties
(+2 files in other folders)
